@@ -34,7 +34,6 @@ o) testmips: Add support for more than 256 MB ram, e.g. by adding
 	3 GB, no limit on 64 bit machines. Low 256 MB can be considered
 	a mirror of first 256 MB of RAM.
 o) Malta: see if 2 GB ram can be used there as well (like the SGI O2 mode).
-o) Disk image end-of-image bug investigation.
 o) Disk overlay short-hand for temporary images.
 o) MIPS ALU instruction variants without register offset loads (may
 	increase performance?)
